--- a/Components/ContextClipboard.xaml
+++ b/Components/ContextClipboard.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="PasteIt.ContextClipboard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ContextClipboard" Height="285" Width="250"
+        Height="280" Width="250"
         WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Border CornerRadius="10" Background="#FF1E1E1E" Padding="10">
         <StackPanel>
             <ListBox Name="ClipboardList" Background="#FF2D2D2D" BorderThickness="0" 
-                     Height="265" ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                     Height="260" ScrollViewer.VerticalScrollBarVisibility="Disabled"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -21,9 +21,10 @@
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="Foreground" Value="White"/>
-                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="Background" Value="#FF2E2E2E"/>
                         <Setter Property="HorizontalContentAlignment" Value="Left"/>
                         <Setter Property="Padding" Value="5"/>
+                        <Setter Property="Height" Value="25.8"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Background" Value="#FF3E3E3E"/>
