--- a/Components/ContextClipboard.xaml
+++ b/Components/ContextClipboard.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PasteIt.ContextClipboard"
+﻿<Window x:Class="PasteCat.ContextClipboard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Height="280" Width="250"
